# AI-Customer-Operations-Automation-System

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci.yml.example
demo/: README.md  index.html
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 001_initial_schema.py
src/api/: config.py  database.py  dependencies.py  main.py
src/api/models/: __init__.py  audit.py  base.py  chunk.py  conversation.py  document.py  tenant.py  user.py
src/api/routers/: admin.py  auth.py  metrics.py  query.py
src/api/schemas/: admin.py  auth.py  query.py
src/api/services/: auth_service.py  cache_service.py  generation_service.py  hallucination_service.py  ingestion_service.py  retrieval_service.py
src/common/: exceptions.py  logger.py  middleware.py  utils.py
src/eval/: golden_set.py  runner.py
src/infra/: Dockerfile  docker-compose.yml
src/ingestion/: chunker.py  embedder.py  extractors.py  pipeline.py
src/llm/: __init__.py  providers.py
src/tests/: conftest.py  test_auth.py  test_health.py  test_ingestion.py
