[project]
name = "ai-customer-operations"
version = "1.0.0"
description = "Enterprise-grade LLM-powered customer support platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "tiktoken>=0.7.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
